@@ -37,7 +37,7 @@ Davidenko, Israel
 Delorenzi, Tom (http://www.greyhoundgames.com)
 Ehnbom, Andreas (http://www.fujileaves.com/)
 Farraro, Eric
-Fedoseev, Evgeniy
+Fedoseev, Evgeniy (http://redballstudio.com/)
 Hathway, John
 Hoffmann, Martin (http://keinebilder.de/)
 Homes, Avi
