@@ -92,8 +92,8 @@
  */
 @interface CCCallFunc : CCActionInstant <NSCopying>
 {
-	id targetCallback;
-	SEL selector;
+	id targetCallback_;
+	SEL selector_;
 }
 /** creates the action with the callback */
 +(id) actionWithTarget: (id) t selector:(SEL) s;
@@ -103,7 +103,7 @@
 -(void) execute;
 @end
 
-/** Calls a 'callback' with the node as the first argument
+/** Calls a 'callback' with the node as the first argument.
  N means Node
  */
 @interface CCCallFuncN : CCCallFunc
@@ -111,14 +111,13 @@
 }
 @end
 
-
 typedef void (*CC_CALLBACK_ND)(id, SEL, id, void *);
-/** Calls a 'callback' with the node as the first argument and the 2nd argument is data
+/** Calls a 'callback' with the node as the first argument and the 2nd argument is data.
  * ND means: Node and Data. Data is void *, so it could be anything.
  */
 @interface CCCallFuncND : CCCallFuncN
 {
-	void			*data;
+	void			*data_;
 	CC_CALLBACK_ND	callbackMethod_;
 }
 
@@ -129,6 +128,21 @@ typedef void (*CC_CALLBACK_ND)(id, SEL, id, void *);
 +(id) actionWithTarget: (id) t selector:(SEL) s data:(void*)d;
 /** initializes the action with the callback and the data to pass as an argument */
 -(id) initWithTarget:(id) t selector:(SEL) s data:(void*) d;
+@end
+
+/** Calls a 'callback' with an object as the first argument.
+ O means Object.
+ @since v0.99.5
+ */
+@interface CCCallFuncO : CCCallFunc
+{
+	id	object_;
+}
+/** creates the action with the callback and the object to pass as an argument */
++(id) actionWithTarget: (id) t selector:(SEL) s object:(id)object;
+/** initializes the action with the callback and the object to pass as an argument */
+-(id) initWithTarget:(id) t selector:(SEL) s object:(id)object;
+
 @end
 
 #pragma mark Blocks Support
